fix scrollbar position in sidebar sections

--- a/client/assets/styles/scss/server/server-sidebar.scss
+++ b/client/assets/styles/scss/server/server-sidebar.scss
@@ -52,7 +52,6 @@
   border-bottom: 1px solid $gray-lighter;
   flex: 1 0 54px;
   overflow-x: hidden;
-  padding: 0 12px;
   display: flex;
   flex-direction: column;
 
@@ -71,9 +70,7 @@
   }
 
   .file-tree {
-    margin: 0 -12px;
-    overflow-y: auto;
-    padding: 0 18px;
+    margin: 0;
   }
 }
 
@@ -82,6 +79,7 @@
   cursor: pointer;
   flex: 0 0 54px;
   line-height: 54px;
+  padding: 0 12px;
   position: relative;
 
   &:hover {
@@ -127,6 +125,7 @@
 .sidebar-section-content {
   flex: 1 1 auto;
   overflow-y: auto;
+  padding: 0 12px;
 }
 
 .sidebar-section-item {
